--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
